настройки для сервера

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-django_cache/*
+django_cache/
+cinema_site/local_settings.py
+cinema_site/prod_settings.py
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
